# Printomat

./: .gitignore  README.md  config.py  console.py  main.py  models.py  pyproject.toml  requirements.txt
client/: README.md  __init__.py  __main__.py  config.example.toml  config.py  main.py  pyproject.toml  requirements.txt
server/: __init__.py  __main__.py  app.py  config.example.toml  config.py  console.py  models.py  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 8f43cf5d5cd9_remove_friendship_token_label_column.py  ff8f06aa9902_add_source_type_to_print_requests.py
server/templates/: error.html  form.html  success.html
services/: base.py  chess_puzzle_service.py  config.example.toml  config.py  echo_service.py  pyproject.toml  weather_service.py
