[project]
name = "printomat-server"
version = "0.1.0"
description = "Printomat receipt printer server"
dependencies = [
    "alembic",
    "fastapi",
    "jinja2",
    "matplotlib",
    "pydantic",
    "python-multipart",
    "requests",
    "sqlalchemy",
    "tabulate",
    "tomli",
    "tomli_w",
    "uvicorn[standard]",
    "websockets",
]
